Praktikum 5/aufgabe_1/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
  namespace: kubermates
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
      - name: web-app
        image: registry.code.fbi.h-da.de/kubermates/devops-kubernetes/web-app:v1.4
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: config-volume
          mountPath: /app/config
      volumes:
      - name: config-volume
        configMap:
          name: web-app-config
      imagePullSecrets:
      - name: regcred
